# ui_demoqa

./: .env_example  .gitignore  README.md  pyproject.toml  settings.toml
demo_qa/: app.py
demo_qa/data/: user_data.py
demo_qa/model/controls/: checkbox.py  dropdown.py  option_select.py  radio.py
demo_qa/model/pages/: __init__.py  practise_form.py  practise_form_module.py
demo_qa/utils/: remove_ads.py
notifications/: config.json
tests/: conftest.py  test_files.py  test_practice_form.py
